Git Tests/force-app/main/default/default/objects/ResponsabilidadeAprovacao__c/ResponsabilidadeAprovacao__c.object-meta.xml
<CustomObject>
    <label>Responsabilidade de aprovação</label>
    <nameField>
        <displayFormat>RA-{00000}</displayFormat>
        <label>Nome de Responsabilidade de aprovação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Responsabilidades de aprovação</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>