Git Tests/force-app/main/default/default/objects/ResponsabilidadeAprovacao__c/fields/Categorias__c.field-meta.xml
<CustomField>
    <fullName>Categorias__c</fullName>
    <label>Categorias</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>AMBOS</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>DIABETES</label>
            </value>
            <value>
                <fullName>G</fullName>
                <label>GENÉRICO</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>MATERIAIS</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>NUTRIÇÃO</label>
            </value>
            <value>
                <fullName>Q</fullName>
                <label>ODONTOLOGIA</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>MEDCTECH</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>SPECIALTY</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <label>EQUIPAMENTO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>