Git Tests/force-app/main/default/default/objects/ResponsabilidadeAprovacao__c/fields/CodigoMesa__c.field-meta.xml
<CustomField>
    <fullName>CodigoMesa__c</fullName>
    <externalId>true</externalId>
    <label>Código da mesa</label>
    <length>15</length>
    <type>Text</type>
</CustomField>