Git Tests/force-app/main/default/default/objects/ResponsabilidadeAprovacao__c/fields/Regiao__c.field-meta.xml
<CustomField>
    <fullName>Regiao__c</fullName>
    <externalId>true</externalId>
    <label>Região</label>
    <length>5</length>
    <type>Text</type>
</CustomField>