Git Tests/force-app/main/default/default/objects/ResponsabilidadeAprovacao__c/fields/UsuarioAprovador__c.field-meta.xml
<CustomField>
    <fullName>UsuarioAprovador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuário aprovador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ResponsabilidadeAprovacao</relationshipName>
    <type>Lookup</type>
</CustomField>