Git Tests/force-app/main/default/default/objects/ResponsabilidadeAprovacao__c/recordTypes/AprovacaoBonificacao.recordType-meta.xml
<RecordType>
    <fullName>AprovacaoBonificacao</fullName>
    <active>true</active>
    <label>Aprovação bonificação</label>
</RecordType>