Git Tests/force-app/main/default/default/objects/ResponsabilidadeAprovacao__c/recordTypes/AprovacaoComercial.recordType-meta.xml
<RecordType>
    <fullName>AprovacaoComercial</fullName>
    <active>true</active>
    <label>Aprovação comercial</label>
</RecordType>