Git Tests/force-app/main/default/default/objects/ResponsabilidadeAprovacao__c/recordTypes/AprovacaoContrato.recordType-meta.xml
<RecordType>
    <fullName>AprovacaoContrato</fullName>
    <active>true</active>
    <label>Aprovação de contrato</label>
</RecordType>