Git Tests/force-app/main/default/default/objects/ResponsabilidadeAprovacao__c/recordTypes/AprovacaoMalha.recordType-meta.xml
<RecordType>
    <fullName>AprovacaoMalha</fullName>
    <active>true</active>
    <label>Aprovação malha</label>
</RecordType>