Git Tests/force-app/main/default/default/objects/ResponsabilidadeAprovacao__c/recordTypes/AprovacaoPricing.recordType-meta.xml
<RecordType>
    <fullName>AprovacaoPricing</fullName>
    <active>true</active>
    <label>Aprovação pricing</label>
</RecordType>