Git Tests/force-app/main/default/default/objects/ResponsabilidadeAprovacao__c/recordTypes/AprovacaoRegionalizacao.recordType-meta.xml
<RecordType>
    <fullName>AprovacaoRegionalizacao</fullName>
    <active>true</active>
    <label>Aprovação regionalização</label>
</RecordType>