Git Tests/force-app/main/default/default/objects/ResponsabilidadeAprovacao__c/recordTypes/AprovacaoReserva.recordType-meta.xml
<RecordType>
    <fullName>AprovacaoReserva</fullName>
    <active>true</active>
    <label>Aprovação reserva de produto</label>
</RecordType>